declareProperties method on Representable
Signed-off-by: Manuel Daniel Dahmen <manuel.dahmen@gmx.com>